# mytest

./: .gitignore  Pipfile  flowser.py  gitbook.py  heart.py  launcher  output.txt  pyproject.toml  readme.md  spider_autovalidat.py  tasks.py  testlogin.py  unittest_search.py  读取文件.py
JobScheduler/: __init__.py  job.py  master.py  queuemanager.py  slave.py
MyAIOHttp/: __init__.py  aiohttp_download_test.py  aiohttp_proxy_test.py
MyAPScheduler/: helper.py  job_list.txt  jobs.sqlite  test.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_all.py
MyAirplaneFight/: run.py  run_back.py
MyAirtest/: test.py
MyAlgorithm/: bigdata.txt  bigdata_find_target.py  dict_items_iteritems.py  os_demo.py  transform_type.py
MyArgParse/: test.py
MyBaiduDict/: __init__.py  baidudict.py  setting.py
MyClick/: test.py
MyCompressImage/: test.py
MyCookbook/: Pipfile  run.py  run2.py
MyDaskTask/: __init__.py  run.py  run_single.py  setting.py  test1.py
MyDevice/: ip.py  linuxinfo.py  run.py  wininfo.py
MyDjango/: django_Q_test.py
MyDjangolab/: manage.py
MyElasticSearch/: run.py  setting.py
MyFabric/: __init__.py  deploy.py  operate.py  setting.py  test.py  test2.py
MyFastAPITest/: run.py
MyFetchYouDaoDict/: Pipfile  online_translate.py
MyFire/: test.py
MyFlask/: run.py
MyGevent/: gevent_demo.py  gevent_demo2.py  gevent_demo3.py  gevent_demo4.py  gevent_demo5.py  greenlet_demo.py  greenlet_demo2.py
MyHello/: animal.py  hello.py  person.py  student.py
MyJieBa/: counter_jieba.py  jieba1.py  jieba2.py  jieba3.py  stopwords.txt  商业的本质目录.txt  (+2 more)
(+456 files in other folders)
