[tool.poetry]
name = "mytest"
version = "0.1.0"
description = "这是一个自学习，测进阶，提高，备忘，知识归纳等项目"
authors = ["hywell <opencoding@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pymysql = "^0.9.3"
sqlalchemy = "^1.3.15"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
